apps/masters-pool-postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: databases
  labels:
    app.kubernetes.io/managed-by: flux
